--- a/e-commerce/shopping-cart/public/index.html
+++ b/e-commerce/shopping-cart/public/index.html
@@ -18,16 +18,15 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <!-- font awesome icons cdn -->
         <link
-            rel="apple-touch-icon"
-            href="%PUBLIC_URL%/logo192.png"
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
         />
-
-        <link
-            rel="manifest"
-            href="%PUBLIC_URL%/manifest.json"
-        />
-        <title>React App</title>
+        <title>Shopping Hub.</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
