feat: add best-store and e-eCommerce project

--- a/e-commerce/nike-store/index.html
+++ b/e-commerce/nike-store/index.html
@@ -9,7 +9,7 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>ike Store Commerce JSSTACK WEb APP</title>
+		<title>Nike Store Commerce JSSTACK WEb APP</title>
 	</head>
 	<body>
 		<div id="root"></div>
